--- a/css/style-ficha.css
+++ b/css/style-ficha.css
@@ -55,7 +55,7 @@ header{
     font-size: 1.8rem;
     margin: 1.25rem; 
     padding: 5px;
-    background-color: var(--RPG-black-opacity);
+    background-color: var(--RPG-black-opacity2);
 }
 
 .rpg-table {
@@ -78,7 +78,7 @@ header{
     color: var(--RPG-white);
     font-weight: 600;
     text-align: right;
-    background-color: var(--input-bg);
+    background-color: var(--RPG-black-opacity3);
     border: 0.0625rem solid var(--border-color); /* 1px */
     border-radius: 0.3125rem; /* 5px */
 }
@@ -91,8 +91,9 @@ header{
     width: 3.5rem;
 }
 
-.rpg-table tr:nth-child(even) {
-    background-color: var(--row-alt-bg);
+.rpg-table tr:nth-child(even)
+{
+    background-color: var(--RPG-black-opacity2);
 }
 
 .rpg-table input[type="text"]:focus,
